--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-media-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shurenbergen.github.io/social-media-project"
+  "homepage": "https://shurenbergen.github.io/social-media-project",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
